# papergraph

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
configs/: config.yaml  schema.yaml
papergraph/: graph.py  nodes.py  output.py  state.py
scripts/: call_app.py  create_table.py
sh/: deploy.sh  docker_build.sh  docker_run.sh  run_app.sh  run_linting.sh  set_bq_role.sh
