[project]
name = "papergraph"
version = "0.1.0"
description = "LangGraph-based scientific paper processing with storage to BigQuery."
authors = [
    {name = "Daniel Nobbe",email = "daniellnobbe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
