[project]
name = "papergraph"
version = "0.1.0"
description = "LangGraph-based scientific paper processing with storage to BigQuery."
authors = [
    {name = "Daniel Nobbe",email = "daniellnobbe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
pylint = "^3.3.4"
ruff = "^0.9.4"
mypy = "^1.14.1"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
indent-width = 4
